# estate-price-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
estate_price_ml/: analysis.py  cli.py  config.py  data.py  estimate.py  features.py  model.py  segments.py  train.py
models/: hesabat.json  kiraye.joblib  sahibkar_satis.joblib  satis.joblib  vasitechi_satis.joblib
tests/: conftest.py  test_analysis.py  test_estimate.py  test_features.py  test_model.py  test_segments.py
