[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "estate-price-ml"
version = "0.1.0"
description = "Azərbaycan əmlak bazarı üçün qiymət proqnozu və analiz"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
estate-price-ml = "estate_price_ml.cli:main"

[tool.setuptools.packages.find]
include = ["estate_price_ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
